commit 5 - connected external stylesheet

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -5,7 +5,8 @@ About
 {% endblock %}
 
 {% block content %}
-<h1>ALL about birds!!!</h1>
+<h1>Who Am I?</h1>
+<h4>I Collect the birds!</h4>
 <p>Contact Me:</p>
 <p>555-555-5555</p>
 {% endblock %} 
