commit 6 - all birds view working

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,6 +19,9 @@
             <ul class="right">
             <li><a href="/about">About</a></li>
             </ul>
+            <ul class="right">
+            <li><a href="/birds">All Birds</a></li>
+            </ul>
         </div>
         </nav>
     </header>
@@ -27,7 +30,7 @@
         {% endblock %}
     </main>
     <footer class="page-footer">
-        <div class="right">All Rights Reserved, &copy; 2019 Bird Collector &nbsp;</div>
+        <div class="right">Made by Kyle H.</div>
     </footer>
 </body>
 </html>
