commit 7 - made changes to app name data

--- a/main_app/templates/birds/index.html
+++ b/main_app/templates/birds/index.html
@@ -5,14 +5,14 @@ All Birds
 {% endblock  %}
 
 {% block content %}
-<h1>All Collected Birds!</h1>
+<h1>All Spotted Birds!</h1>
 
     {% for bird in birds %}
         <div class="card">
             <div class="card-content">
             <span>{{ bird.species }}</span>
-            <p>Diet: {{ bird.likes}}</p>
-            <p>Is native to: {{ bird.native_to }}</p>
+            <p>Diet: {{ bird.likes }}</p>
+            <p>Native to: {{ bird.native_to }}</p>
             </div>
         </div>
     {% endfor %}
