--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -6,7 +6,7 @@ About
 
 {% block content %}
 <h1>Who Am I?</h1>
-<h4>I Collect the birds!</h4>
+<h4>I look at birds!</h4>
 <p>Contact Me:</p>
 <p>555-555-5555</p>
 {% endblock %} 
