--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bird Collector - {% block title %}{% endblock %}</title>
+    <title>Bird Watcher - {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
@@ -14,7 +14,7 @@
         <nav>
         <div class="nav-wrapper">
             <ul>
-            <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BirdCollector</a></li>
+            <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BirdWatcher</a></li>
             </ul>
             <ul class="right">
             <li><a href="/about">About</a></li>
