--- a/main_app/templates/birds/detail.html
+++ b/main_app/templates/birds/detail.html
@@ -39,6 +39,28 @@
         </tbody>
         </table>
     </div>
+    <hr>
+    <div class="row">
+        <div class="col s6">
+            <h3>{{ bird.species }}'s Habitats</h3>
+            {% if bird.habitats.count %}
+            {% for habitat in bird.habitats.all %}
+                <div class="card">
+                <div class="card-content">
+                    <span class="card-title">
+                        {{ habitat.name }}
+                    </span>
+                </div>
+                </div>
+            {% endfor %}
+            {% else %}
+            <h5>No Habitats set! :(</h5>
+            {% endif %}
+        </div>
+    <!-- Available habitats will come after this line -->
+    </div>
+
+
     <script>
         const dateEl = document.getElementById('id_date');
             M.Datepicker.init(dateEl, {
