--- a/main_app/templates/birds/detail.html
+++ b/main_app/templates/birds/detail.html
@@ -59,6 +59,28 @@
         </div>
     <!-- Available habitats will come after this line -->
     </div>
+    <div class="col s6">
+        <h3>Available Habitats</h3>
+        {% if habitats.count %}
+            {% for habitat in habitats.all %}
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">
+                        {{ habitat.name }}
+                    </span>
+                </div>
+                <div class="card-action">
+                    <form action="{% url 'assoc_habitat' bird.id habitat.id %}" method="post">
+                    {% csrf_token %}
+                        <button type="submit" class="btn">Add</button>
+                    </form>
+                </div>
+            </div>
+            {% endfor %}
+        {% else %}
+        <h5>{{bird.species}} already has all Habitats available</h5>
+        {% endif %}
+    </div>
 
 
     <script>
