commit 18 - birds can now be added through new bird view

--- a/main_app/templates/birds/index.html
+++ b/main_app/templates/birds/index.html
@@ -11,7 +11,7 @@ All Birds
         <div class="card">
             <a href="{% url 'detail' bird.id %}">
                 <div class="card-content">
-                    <span>{{ bird.species }}</span>
+                    <span><h4>{{ bird.species }}</h4></span>
                     <p>Diet: {{ bird.likes }}</p>
                     <p>Native to: {{ bird.native_to }}</p>
                 </div>
