--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,6 +22,7 @@
             </ul>
             <ul class="right">
             <li><a href="/birds">All Birds</a></li>
+            <li><a href="{% url 'add_bird' %}">Add Bird</a></li>
             </ul>
         </div>
         </nav>
