--- a/main_app/templates/birds/detail.html
+++ b/main_app/templates/birds/detail.html
@@ -6,40 +6,44 @@
 
 {% block content %}
 <h1>{{ bird.species }} Details!</h1>
-
-    <div class="card">
+<div class="row">
+    <div class="col s6">
+        <div class="card">
             <div class="card-content">
                 <span class="card-title">{{ bird.species }}:</span>
                 <p>Diet: {{ bird.likes }}</p>
                 <p>Native to: {{ bird.native_to }}</p>
             </div>
+        </div>
+            
     </div>
     <div class="col s6">
-    <form action="{% url 'add_spotting' bird.id %}" method="POST">
-    {% csrf_token %}
-    {{ spotting_form.as_p }}
-    <input type="submit" class="btn" value="Record Spotting">
-    </form>
-    <table class="striped">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Location</th>
-                <th>Time Of Day</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for spotting in bird.spotting_set.all %}
-            <tr>
-                <td>{{spotting.date}}</td>
-                <td>{{spotting.location}}</td>
-                <td>{{spotting.get_time_of_day_display}}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
+        <form action="{% url 'add_spotting' bird.id %}" method="POST">
+            {% csrf_token %}
+            {{ spotting_form.as_p }}
+            <input type="submit" class="btn" value="Record Spotting">
+        </form>
+        <table class="striped">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Location</th>
+                    <th>Time Of Day</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for spotting in bird.spotting_set.all %}
+                <tr>
+                    <td>{{spotting.date}}</td>
+                    <td>{{spotting.location}}</td>
+                    <td>{{spotting.get_time_of_day_display}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
     </div>
-    <hr>
+</div>
+<hr>
     <div class="row">
         <div class="col s6">
             <h3>{{ bird.species }}'s Habitats</h3>
@@ -61,8 +65,8 @@
             <h5>No Habitats set! :(</h5>
             {% endif %}
         </div>
-    <!-- Available habitats will come after this line -->
     </div>
+    <!-- Available habitats will come after this line -->
     <div class="col s6">
         <h3>Available Habitats</h3>
         {% if habitats.count %}
