commit 19 - bird can now be deleted from details view

--- a/main_app/templates/birds/detail.html
+++ b/main_app/templates/birds/detail.html
@@ -14,6 +14,11 @@
                 <p>Diet: {{ bird.likes }}</p>
                 <p>Native to: {{ bird.native_to }}</p>
             </div>
+
+            <div class="card-action">
+                <a href="" type="submit" class="btn-small">Edit</a>
+                <a href="{% url 'delete_bird' bird.id %}" type="submit" class="btn-small red">Delete</a>
+            </div>
         </div>
             
     </div>
