commit 21 - authentication working

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,14 +15,18 @@
         <nav>
         <div class="nav-wrapper">
             <ul>
-            <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BirdWatcher</a></li>
+                <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BirdWatcher</a></li>
             </ul>
             <ul class="right">
-            <li><a href="/about">About</a></li>
-            </ul>
-            <ul class="right">
-            <li><a href="/birds">All Birds</a></li>
-            <li><a href="{% url 'add_bird' %}">Add Bird</a></li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'index' %}">All Birds</a></li>
+                    <li><a href="{% url 'add_bird' %}">Add Birds</a></li>
+                    <li><a href="{% url 'logout' %}">Log Out</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Log In</a></li>
+                    <li><a href="{% url 'signup' %}">Sign Up</a></li>
+                {% endif %}
             </ul>
         </div>
         </nav>
