--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -5,5 +5,5 @@ Home
 {% endblock %}
 
 {% block content %}
-    <h1>Welcome to Bird Collector!</h1>
+    <h1>Welcome to Bird Watcher!</h1>
 {% endblock %}
